# scratch

./: CMakeLists.txt  conanfile.txt  hexscratch.cpp  main.cpp  templates.cpp
src/: CMakeLists.txt  main.cpp
